--- a/ThingLing.WPF.Controls.TabControl/TabItemBody.xaml
+++ b/ThingLing.WPF.Controls.TabControl/TabItemBody.xaml
@@ -1,14 +1,15 @@
-﻿<UserControl x:Class=" ThingLing.WPF.Controls.InternalControls.TabItemBody"
-             x:ClassModifier="internal"
+﻿<UserControl x:Class=" ThingLing.WPF.Controls.TabItemBody"
+             x:ClassModifier="public"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:ThingLing.WPF.Controls.InternalControls"
+             xmlns:local="clr-namespace:ThingLing.WPF.Controls"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <DockPanel>
-        <local:TabItemHeader x:Name="TabItemHeader" DockPanel.Dock="Top"/>
+        <local:TabItemHeader x:Name="TabItemHeader" x:FieldModifier="public"
+                             DockPanel.Dock="Top" Margin="0"/>
         <Grid x:Name="ContentPanel"/>
     </DockPanel>
 </UserControl>
